@@ -4,7 +4,7 @@ package SPVM::Sys::Socket::Sockaddr;
 
 =head1 Name
 
-SPVM::Sys::Socket::Sockaddr - Sys::Socket::Sockaddr is a SPVM module
+SPVM::Sys::Socket::Sockaddr - struct sockaddr in C language
 
 =head1 Usage
 
@@ -12,31 +12,33 @@ SPVM::Sys::Socket::Sockaddr - Sys::Socket::Sockaddr is a SPVM module
   
 =head1 Description
 
-C<Sys::Socket::Sockaddr> is a L<SPVM> module.
+C<Sys::Socket::Sockaddr> is the class for the C<struct sockaddr> in C<C language>.
 
-=head1 Fields
+This is a L<pointer class|SPVM::Document::Language/"Pointer Class">.
 
+=head1 Well Known Child Classes
 
+=over 2
 
-=head1 Class Methods
+=item L<Sys::Socket::Sockaddr::In|SPVM::Sys::Socket::Sockaddr::In>
 
+=item L<Sys::Socket::Sockaddr::In6|SPVM::Sys::Socket::Sockaddr::In6>
 
+=item L<Sys::Socket::Sockaddr::Un|SPVM::Sys::Socket::Sockaddr::Un>
+
+=item L<Sys::Socket::Sockaddr::Storage|SPVM::Sys::Socket::Sockaddr::Storage>
+
+=back
 
 =head1 Instance Methods
 
+  method sa_family : byte ()
 
-
-=head1 Repository
-
-
-
-=head1 Author
-
-[--user-name] C<[--user-email]>
+Gets C<sa_family>.
 
 =head1 Copyright & License
 
-Copyright 2022-2022 [--user-name], all rights reserved.
+Copyright 2022-2022 Yuki Kimoto, all rights reserved.
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
