@@ -32,13 +32,13 @@ Create a new C<Sys::Socket::Sockaddr::In6> object.
 
 =head2 DESTROY
 
-  method DESTROY : void ();
+  method DESTROY : void ()
 
 The destructor.
 
 =head2 sa_family
 
-  method sa_family : int ()
+  method sa_family : byte ()
 
 Gets C<sa_family>. This is the overriden method of the L<sa_family|SPVM::Sys::Socket::Sockaddr/"sa_family"> method in the Sys::Socket::Sockaddr class.
 
@@ -50,13 +50,13 @@ Gets C<sin6_family>.
 
 =head2 set_sin6_family
 
-  method set_sin6_family : void ($family : byte);
+  method set_sin6_family : void ($family : byte)
 
 Sets C<sin6_family>.
 
 =head2 sin6_flowinfo
 
-  method sin6_flowinfo : int ();
+  method sin6_flowinfo : int ()
 
 Gets C<sin6_flowinfo>.
 
