@@ -1,5 +1,5 @@
 class Sys::Socket::Sockaddr::Interface : interface_t {
   required method has_interface : int ();
   
-  method sa_family : int ();
+  method sa_family : byte ();
 }
